--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "nodemailer": "^7.0.6"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
