--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "build": "echo 'No build step required for Node.js'"
   },
   "dependencies": {
-    "express": "^4.21.1",
+    "@supabase/supabase-js": "^2.58.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "@supabase/supabase-js": "^2.49.8"
+    "express": "^4.21.1"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
     "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/node": "^20.10.0",
     "typescript": "^5.6.3"
   }
