--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "node --watch src/server.js",
-    "start": "node src/server.js",
+    "dev": "node --watch start.js",
+    "start": "node start.js",
     "build": "echo 'No build step required for Node.js'"
   },
   "dependencies": {
