xác thực đăng kí quên mk

--- a/.env
+++ b/.env
@@ -15,3 +15,10 @@ SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhY
 
 # JWT Secret (for authentication)
 JWT_SECRET=your_jwt_secret_here
+
+# SMTP Configuration for Email Sending
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=hieutrung1029@gmail.com
+SMTP_PASS=kpfy mhzg gqbl xwwi
+SMTP_FROM=ChargeTech <hieutrung1029@gmail.com>
