--- a/.env
+++ b/.env
@@ -22,3 +22,6 @@ SMTP_PORT=587
 SMTP_USER=hieutrung1029@gmail.com
 SMTP_PASS=kpfy mhzg gqbl xwwi
 SMTP_FROM=ChargeTech <hieutrung1029@gmail.com>
+
+# Google Maps API Key
+GOOGLE_MAPS_API_KEY=AIzaSyBOiugUzBtWhWdj3b8KGx1cDk4nQSPTA0U
