--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^20.10.0",
+    "supabase": "^2.53.6",
     "typescript": "^5.6.3"
   }
 }
